style.css
.card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 55%;
  border-radius: 5px;
  padding: 32px;
  margin-top: 32px;
  margin-left:auto;
  margin-right:auto;
}

.card:hover { 
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.img-profile {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 120px;
  height: 120px;
  border-radius: 50%;
  object-fit: cover;
}

.container {
  padding: 2px 16px;
}

.header {
  color: gray
}

.my-body {
  background-color: coral;
}

